add assets/payments folder and media icons for the footer

--- a/src/index.html
+++ b/src/index.html
@@ -188,7 +188,7 @@
       </div>
       <footer>
         <div class="row">
-          <div class="col-3">hh</div>
+          <div class="col-3">letDomain</div>
           <div class="col-3">
             <h3>Product</h3>
             <ul>
@@ -213,6 +213,21 @@
               <li>Dropshipping Name Generator</li>
               <li>T shirt Name Generator</li>
             </ul>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-6">
+            <img src="../src/assets/payments/visa.png" />
+            <img src="../src/assets/payments/mastercard.png" />
+            <img src="../src/assets/payments/paypal.png" />
+            <img src="../src/assets/payments/discover.png" />
+          </div>
+          <div class="col-6">
+            <i class="fa-brands fa-facebook"></i>
+            <i class="fa-brands fa-instagram"></i>
+            <i class="fa-brands fa-youtube"></i>
+            <i class="fa-brands fa-x-twitter"></i>
+            <i class="fa-brands fa-linkedin"></i>
           </div>
         </div>
       </footer>
